# Task-List-App

./: README.md
couchdb-glib/: Makefile.am  NEWS  NOTES.kamstrup  README  TODO  autogen.sh  configure.ac  couchdb-glib.doap  couchdb-glib.pc.in  desktopcouch-glib.pc.in
couchdb-glib/couchdb-glib/: Makefile.am  couchdb-array-field.c  couchdb-array-field.h  couchdb-credentials.c  couchdb-credentials.h  couchdb-database-info.c  couchdb-database-info.h  couchdb-document-info.c  couchdb-document-info.h  couchdb-document.c  couchdb-document.h  couchdb-glib.h  couchdb-session.c  couchdb-session.h  couchdb-struct-field.c  couchdb-struct-field.h  couchdb-types.h  dbwatch.c  dbwatch.h  oauth.c  utils.c  utils.h  xmalloc.c
couchdb-glib/desktopcouch-glib/: Makefile.am  desktopcouch-document-contact.c  desktopcouch-document-contact.h  desktopcouch-document-task.c  desktopcouch-document-task.h  desktopcouch-document.c  desktopcouch-document.h  desktopcouch-glib.h  desktopcouch-session.c  desktopcouch-session.h
couchdb-glib/doc/: Makefile.am
couchdb-glib/doc/reference/: Makefile.am  couchdb-glib-docs.sgml  couchdb-glib.types
couchdb-glib/tests/: Makefile.am  createCouchContacts.py  test-couchdb-glib.c  test-desktopcouch-glib.c  test-list-databases.c  test-oauth.c  test-oauth.py
couchdb-glib/tests/config/: couchdb-auth.ini
couchdb-task-web/: couchapp.json
couchdb-task-web/_attachments/: index.html
couchdb-task-web/_attachments/script/: main.js
couchdb-task-web/_attachments/style/: iphone.css  main.css
couchdb-task-web/views/get_tasks/: map.js
evolution-couchdb/: Makefile.am  NEWS  autogen.sh  configure.ac  evolution-couchdb.doap
evolution-couchdb/addressbook/: GNOME_Evolution_CouchDB.server.in  Makefile.am  e-book-backend-couchdb-factory.c  e-book-backend-couchdb.c  e-book-backend-couchdb.h
evolution-couchdb/calendar/: GNOME_Evolution_CouchDB.server.in  Makefile.am  e-cal-backend-couchdb-factory.c  e-cal-backend-couchdb-factory.h  e-cal-backend-couchdb.c  e-cal-backend-couchdb.h
evolution-couchdb/plugins/: Makefile.am  couchdb-contacts-source.c  couchdb-contacts-source.h  couchdb-tasks-source.c  couchdb-tasks-source.h  org-gnome-evolution-couchdb.eplug.xml.in
evolution-couchdb/po/: LINGUAS  POTFILES.in  POTFILES.skip  ca.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  gl.po  hu.po  nb.po  nds.po  pt_BR.po  sl.po  sv.po  zh_CN.po
